--- a/daycounter/DayCounter.html
+++ b/daycounter/DayCounter.html
@@ -134,7 +134,14 @@ font-family: sans-serif;
 }
 
 
+#credit {
 
+position: absolute;
+bottom: 1%;
+right: 1%;	
+font-family: 'Courier New', Courier, monospace;
+color: white;
+}
 </style>
 </head>
 <body>
@@ -149,6 +156,9 @@ font-family: sans-serif;
 </div>
 
 </div>
+
+<a id="credit" href="../records.html">&copy; records</a>
+
 
 <script>
 
