--- a/records.html
+++ b/records.html
@@ -7,6 +7,7 @@
  <head> 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon.ico">
 <title>Alin Records</title> 
 <link href="css/records.css" rel="stylesheet" type="text/css">
 <meta name="author" content="Bărbulescu Alin-Constantin">
@@ -94,6 +95,17 @@
      <a href="alfabet/alphabet-find-letter.html" alt = "">Pozitie litera</a>   
 
        <p> Arata a cata litera din alfabet este.</p>
+   </div>
+
+
+
+   <div class="item">
+
+    <h4> Calendar  </h4>
+       
+     <a href="calendar\calendar.html" alt = "calendar">Calendar</a>   
+
+       <p>  Exemplu de calendar.</p>
    </div>
 
 </div>
