--- a/nameload/nameload.html
+++ b/nameload/nameload.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 
-<head>
-
-<title>Corect! </title>
-
+<html lang="ro-RO">
+<head>	
+<title>Loading...</title>
+<meta charset="UTF-8">
+<meta name="author" content="Barbulescu Alin-Constantin">
 <style>
 
 * {
@@ -14,10 +15,9 @@
 	
 }
 
-
 body {
 
-	background-color: rgb(224, 221, 221);
+	background-color: rgb(15, 15, 15);
 	max-width: 1300px;
     padding: 4px;
     margin: 0 auto;
@@ -25,40 +25,23 @@ body {
 }
 
 
-h1 {
+p {
 
 	position: absolute;
 	top: 40%;
 	left: 30%;
-	color: rgb(37, 34, 223);
+	color: rgb(236, 236, 236);
+	text-align: center;
 	font-size: 90px;
 	font-family: sans-serif;
-	animation-name: alin;
-	animation-duration: 2s;
-	animation-fill-mode: forwards;
-	text-shadow: 5px 5px 5px 5px black;
-}
-
-
-
-
-
-
-@Keyframes alin {
-
-
-	0%{text-shadow: 2px 2px blue;}
 	
-	100% {text-shadow: 2px 2px green;}
-
 }
-
 
 
 #load {
 
 	width: 100%;
-	height: 20px;
+	height: 25px;
 	position: absolute;
 	bottom: 10px;
 	left: 5px;
@@ -67,12 +50,9 @@ h1 {
 	animation-duration: 5s;
 	animation-fill-mode: forwards;
 	background-color: black;
-	border-radius: 10px;
 }
 
-
-@Keyframes loading {
-
+@keyframes  loading {
 	
 	0% {width:0; background-color:black;}
 
@@ -84,35 +64,19 @@ h1 {
 
 }
 
-
-
 </style>
-
-
-
-
-
-
-
-
 
 </head>
 
-
 <body>
 
+	<p>Hello World</p>
 
-	<h1>Hello World</h1>
-<i>...</i>
-
-
-
-
-
-<div id="load"></div>
+<div id="load">
+	
+</div>
 
 
 </body>
-
 
 </html>
