--- a/daycounter/DayCounter.html
+++ b/daycounter/DayCounter.html
@@ -10,140 +10,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="Cache-control" content="no-cache">
 <meta name="author" content="Barbulescu Alin-Constantin">
-
+<link href="../css/counter.css" rel="stylesheet" type="text/css">
 
 <title>DayCounter</title>
 
-
-<style>
-
-
-
-body {
-
-	background-color: #302828;
-	color: white;
-	font-family: sans-serif;
-}
-
-
-#title {
-
-	width: 100%;
-	text-align: center;
-	font-family: sans-serif;
-	background-color: purple;
-	margin-top: 0;
-}
-
-#box {
-
-	position: absolute;
-	top: 20%;
-	left: 35%;
-	box-shadow: 2px 2px 2px purple;
-	padding: 10px;
-}
-
-@media screen and (max-width: 840px) {
-
-	#box {
-	
-		left: 5%;
-	
-	}
-
-}
-
-#time {
-	
-	padding: 10px;
-	width: 300px;
-}
-
-button {
-	
-	padding: 10px;
-	margin-top: 15px;
-	background-color: purple;
-	font-family: verdana;
-	color: white;
-	border: 1px solid transparent;
-	border-radius: 3%;
-
-}
-
-button:hover {
-		
-	cursor: pointer;
-	background-color: #660066;
-	border-radius: 5%;	
-}
-
-#show {
-	
-	
-	display: none;
-	width: 140px;
-	height: 140px;
-	border: 2px dotted;
-	justify-content: center;
-	border-radius: 50%;
-	position: relative;
-	top: 30%;
-	left: 25%;
-	animation: show 5s infinite;
-}
-
- @keyframes show {
-
-	from{border: 2px dotted;}
-	to{border: 3px solid purple;}
-
-}
-
-#result {
-
-	height: 30px;
-
-}
-
-h1 {
-
-	font-family: sans-serif;
-	color: white;
-	width: 100%;
-	text-align: center;
-}
-
-#countdown {
-
-	font-size: 30px;
-	color: white;
-	width: 100%;
-	text-align: center;
-	margin-top: 45px;
-}
-
-p {
-
-position: absolute;
-bottom: 0;
-right: 1%;
-font-family: sans-serif;
-}
-
-
-#credit {
-
-position: absolute;
-bottom: 1%;
-right: 1%;	
-font-family: 'Courier New', Courier, monospace;
-color: white;
-}
-</style>
 </head>
+
+
+
 <body>
 <h1 id="title">Calculator Zile</h1>
 <div id="box">
