--- a/generator/Generator .html
+++ b/generator/Generator .html
@@ -9,71 +9,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Cache-control" content="no-cache">
 <title> Color Picker </title>
-
+<link href="../css/generator.css" rel="stylesheet" type="text/css">
 
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
  <meta http-equiv="refresh" content="">
-
-<style>
-
-
-body {
-
-	font-family: 'Courier New', Courier, monospace;
-
-}
-
-button {
-	
-	border-radius: 5%;
-	border:none;
-	background:rgb(253, 252, 252);
-	padding: 8px;
-	color:rgb(15, 15, 15);
-	font-size: 16px;
-	cursor: pointer;
-}
-
-button:hover {
-
-	border: 1px solid rgba(255, 0, 0, 0.473);
-
-}
- 
-
-#set {
-
-	position:fixed;
-	right: 0;
-	bottom: 0;
-	padding:10px;
-	font-size:20px;
-	border:none;
-	background:rgb(13, 13, 14);
-	color:white;
-	cursor: pointer;
-}
-
-
-#credit {
-	
-	font-family: 'Courier New', Courier, monospace;
-	color: rgb(255, 255, 255);
-	font-size: 14px;
-}
-
-
-i:hover {
-
-	text-decoration: underline;
-
-}
-
-</style>
-
-
-
 
 
 </head>
